# SimplisticProc

./: .gitignore  CMakeLists.txt
include/simplistic/: proc.h
include/simplistic/proc/: Exceptions.h  Handle.h  IModules.h  IMultiOpenerFromName.h  IOneOpenerFromName.h  IOpenerFromName.h  IProc.h  IProcOpenerFromName.h  Info.h  ModuleInfo.h  Modules.h  OpenerFromMultiInfo.h  Platform.h  ProcOpenerFromName.h  Process.h  Self.h
include/simplistic/proc/Handle/: Closer.h
include/simplistic/proc/Info/: BuilderFromName.h
include/simplistic/proc/Utility/: Handle.h
src/: CMakeLists.txt  Exceptions.cpp  HandleCloser.cpp  Modules.cpp  MultiInfoBuilderFromName.cpp  ProcOpenerFromMultiInfo.cpp  ProcOpenerFromName.cpp  Process.cpp  Self.cpp
tests/: CMakeLists.txt  playg2.cpp  playground.cpp
